RESOLVED FIXED71615
Fix a small leak in Mac version of LayoutTestController
https://bugs.webkit.org/show_bug.cgi?id=71615
Summary Fix a small leak in Mac version of LayoutTestController
Darin Adler
Reported 2011-11-05 17:40:11 PDT
Fix a small leak in Mac version of LayoutTestController
Attachments
Patch (2.00 KB, patch)
2011-11-05 17:42 PDT, Darin Adler
mrowe: review+
Darin Adler
Comment 1 2011-11-05 17:42:03 PDT
Darin Adler
Comment 2 2011-11-05 18:07:32 PDT
Note You need to log in before you can comment on or make changes to this bug.