Fix a small leak in Mac version of LayoutTestController https://bugs.webkit.org/show_bug.cgi?id=71615

Reviewed by Mark Rowe.

* DumpRenderTree/mac/LayoutTestControllerMac.mm:
(LayoutTestController::applicationCacheDiskUsageForOrigin): Release the origin.
(LayoutTestController::localStorageDiskUsageForOrigin): Ditto.


git-svn-id: svn://svn.chromium.org/blink/trunk@99366 bbb929c8-8fbe-4397-9dbb-9b2b20218538